--- a/dev/notebooks/make obs locations.ipynb
+++ b/dev/notebooks/make obs locations.ipynb
@@ -31,7 +31,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -40,6 +40,16 @@
       "<h3>Read in observation station locations in real life coordinates</h3>\n",
       "Reading in the list of stations is left up to the user because there are so many different formats possible (txt files, excel, etc).  Should end up with an array with 3 columns: [station_names m_index n_index].  Below is an example of sites for Sendai Japan, loaded from an excel file."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.ma.array("
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
